# finance-planner-backend

./: .env.dev  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.dev.yaml  docker-compose.yaml  nginx.conf  nginx.dev.conf  pyproject.toml
finance_planner/: gunicorn.conf.py  manage.py  models.py  serializers.py  utils.py
finance_planner/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
finance_planner/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_remove_account_accent_color_and_more.py  0004_alter_account_current_balance.py  0005_alter_account_id.py  0006_account_current_balance_updated.py
finance_planner/accounts/tests/: test_models.py
finance_planner/auth/: authentication.py  models.py  permissions.py  serializers.py  urls.py  utils.py  viewsets.py
finance_planner/categories/: admin.py  models.py  serializers.py  urls.py  views.py
finance_planner/categories/migrations/: 0001_initial.py  0002_initial.py
finance_planner/categories/tests/: test_models.py
finance_planner/core/: asgi.py  bootstrap.py  exceptions.py  json_formatter.py  middlewares.py  permissions.py  settings.py  urls.py  utils.py  wsgi.py
finance_planner/core/management/commands/: bootstrap_dev_data.py
finance_planner/regular_operations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
finance_planner/regular_operations/migrations/: 0001_initial.py  0002_alter_regularoperation_amount.py  0003_alter_regularoperation_id.py  0004_regularoperation_deleted_at_and_more.py  0005_remove_regularoperation_is_active_and_more.py
finance_planner/scenarios/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
finance_planner/scenarios/migrations/: 0001_initial.py  0002_initial.py  0002_paymentscenario_operation.py  0003_alter_scenariorule_amount.py  0004_alter_scenario_id_alter_scenariorule_id.py  0005_scenario_deleted_at_scenariorule_created_at_and_more.py  0006_remove_scenario_is_active_scenario_active_before.py
finance_planner/transactions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
finance_planner/transactions/migrations/: 0001_initial.py  0002_initial.py  0003_transaction_operation_transaction_scenario_rule.py  0004_alter_transaction_id.py  0005_transaction_planned_date.py
finance_planner/users/: admin.py  models.py  serializers.py  urls.py  views.py
finance_planner/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py
finance_planner/users/tests/: test_models.py
scripts/: start.sh  start_dev.sh
tests/: conftest.py  constants.py  test_bootstrap_fixtures.py
tests/accounts/: conftest.py  test_account_balance_updates.py  test_account_statistics.py  test_accounts_models.py  test_statistics_functions.py
tests/categories/: test_categories_models.py
tests/regular_operations/: conftest.py  test_regular_operations_api.py
tests/scenarios/: conftest.py  test_scenario_rules_api.py  test_scenarios_api.py
tests/transactions/: test_functions.py  test_transaction_balance_updates.py  test_transactions.py
tests/users/: test_svc_user_api.py  test_users_models.py
