[project]
name = "finance-planner-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Belov Daniil",email = "belovdaniil.02@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "environs>=11.0.0",
    "django>=5.2.6",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-environ>=0.4.54",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
pythonpath = [
    "finance_planner",
]
testpaths = [
    "tests",
]
